--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -35,4 +36,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.selected-book {
+  margin-top: 200px;
+  position: sticky;
+  top: 0px;
+}
+
+.selected-book-actual {
 }
